# mtgas

./: .dockerignore  .env.example  .flake8  .gitignore  .stylelintrc.json  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  VERSION_MANAGEMENT.md  container-run.md  docker-compose.override.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_parser.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
cards/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
cards/management/commands/: build_phash_index.py
cards/migrations/: 0001_initial.py  0002_papercard_quantity.py
cards/templates/cards/: add_paper_card.html  card_detail.html  index.html  paper_card_detail.html  upload.html
cards/templatetags/: cards_extras.py
docs/: BACKUPS.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  LOGGING.md  LOG_PARSING.md  MATCH_REPLAY.md  card_image_help.html
docs/exported_decks/: Wonderous Wizardry.txt
mtgas_project/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
prompts/: planning.txt  session1.md
src/: __init__.py  cli.py  exceptions.py
src/db/: database.py  schema.sql
src/parser/: __init__.py  log_parser.py
src/services/: import_service.py  play_advisor.py  scryfall.py
src/web/: __init__.py
stats/: __init__.py  admin.py  apps.py  deck_diff.py  models.py  urls.py  views.py
stats/management/commands/: download_cards.py  import_log.py  resolve_unknown_cards.py
stats/migrations/: 0001_initial.py  0002_card_phash.py  0002_unknowncard.py  0003_card_token_fields.py
stats/static/css/: style.css
stats/static/js/: app.js  charts.js
stats/templates/: backup.html  base.html  card_data.html  dashboard.html  deck_detail.html  deck_gallery.html  deck_history.html  decks.html  import_log.html  import_sessions.html  match_analysis.html  match_detail.html  match_replay.html  matches.html  status.html  unknown_card_fix.html  unknown_cards_list.html
stats/templates/partials/: zone_diff.html
stats/utils/: zone_utils.py
stats/views/: __init__.py  backup.py  cards.py  dashboard.py  decks.py  imports.py  matches.py  status.py
tests/: conftest.py  test_backup.py  test_cards.py  test_deck_analysis.py  test_deck_versioning.py  test_models.py  test_parser.py  test_play_advisor.py  test_scryfall.py  test_status.py  test_unknown_cards.py  test_views.py
